adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repellendus adipisci asperiores ratione. Laborum, esse facere autem numquam cum corrupti, voluptatum ex voluptates tempore dolorem consequuntur, enim alias eligendi nihil.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio perferendis nobis rerum, expedita, voluptates ab, nulla maiores consequuntur placeat asperiores quidem aperiam. Nam nihil ad nesciunt tenetur obcaecati, atque laborum!</p>
 </body>
 </html>
